--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <junit.version>4.12</junit.version>
+        <junit5.version>5.0.0-ALPHA</junit5.version>
         <assertj.version>3.4.1</assertj.version>
         <hamcrest-all.version>1.3</hamcrest-all.version>
         <quickcheck-all.version>0.6</quickcheck-all.version>
@@ -62,11 +63,13 @@
 
     
         <!-- https://mvnrepository.com/artifact/junit/junit -->
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>${junit.version}</version>
-        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.junit/junit5-engine -->
+		<dependency>
+		    <groupId>org.junit</groupId>
+		    <artifactId>junit5-engine</artifactId>
+		    <version>${junit5.version}</version>
+		</dependency>
+		        
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
