--- a/pom.xml
+++ b/pom.xml
@@ -10,11 +10,10 @@
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <junit.version>4.12</junit.version>
-        <junit5.version>5.0.0-ALPHA</junit5.version>
         <assertj.version>3.4.1</assertj.version>
         <hamcrest-all.version>1.3</hamcrest-all.version>
         <quickcheck-all.version>0.6</quickcheck-all.version>
-        <mockito-all.version>1.10.19</mockito-all.version>
+        <mockito-core.version>2.7.1</mockito-core.version>
     </properties>
 
     <dependencies>
@@ -30,7 +29,7 @@
             <version>1.3.2</version>
         </dependency>
         
-        <!-- LOJG -->
+        <!-- LOG4J -->
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-api</artifactId>
@@ -62,14 +61,6 @@
 		</dependency>
 
     
-        <!-- https://mvnrepository.com/artifact/junit/junit -->
-        <!-- https://mvnrepository.com/artifact/org.junit/junit5-engine -->
-		<dependency>
-		    <groupId>org.junit</groupId>
-		    <artifactId>junit5-engine</artifactId>
-		    <version>${junit5.version}</version>
-		</dependency>
-		        
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
@@ -94,10 +85,11 @@
         </dependency>
         
         <!-- Mockito -->
+
         <dependency>
             <groupId>org.mockito</groupId>
-            <artifactId>mockito-all</artifactId>
-            <version>${mockito-all.version}</version>
+            <artifactId>mockito-core</artifactId>
+            <version>${mockito-core.version}</version>
             <scope>test</scope>
         </dependency>
         
